<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainMenuActivity">


    <Button
        android:id="@+id/walletBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:onClick="wallet"
        android:text="@string/wallet" />

    <Button
        android:id="@+id/registerExpenseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registerExpense"
        android:text="@string/registerExpense" />

    <Button
        android:id="@+id/recordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="record"
        android:text="@string/record" />

</LinearLayout>